--- a/index.html
+++ b/index.html
@@ -20,30 +20,36 @@
                         <li class="unselected diplome-menu">Diplôme</li>
                     </ul>
                 </div>
-                <div class="texte col-lg-8">
+                <div class="text col-lg-8">
                     <div class="candidat" style="display: none;"><p class="titre">Le candidat</p>
-                    Mathieu Croteau<br>
-                    Téléphone : 06.25.70.46.90<br>
-                    Mail : mathieu.croteau@hotmail.fr<br>
-                    Localisation : Pont-Audemer <br>
-                    Contrat : Contrat de professionnalisation sur 3 ans<br>
-                    École : Normandie web school
+                        <p class="text-content">
+                            Mathieu Croteau<br>
+                            Téléphone : 06.25.70.46.90<br>
+                            Mail : mathieu.croteau@hotmail.fr<br>
+                            Localisation : Pont-Audemer <br>
+                            Contrat : Contrat de professionnalisation sur 3 ans<br>
+                            École : Normandie web school
+                        </p>
                     </div>
                     <div class="xp" style="display: none;"><p class="titre">Expériences professionnelles</p>
-                        Septembre 2014 - Septembre 2016<br>
-                        Formateur / Animateur - Net cité<br>
-                        Cours informatique / Gestion de l'ouverture publique / Accueil physique et téléphonique / Aide au service informatique<br><br>
-                        Février 2013 - Août 2013<br>
-                        Gestion relation client à distance - Acticall EDF<br>
-                        Prise d'appels entrant / Gestion courante du compte EDF<br><br>
-                        Janvier 2008 Janvier 2013<br>
-                        Vendeur multimédia - Sony Nintendo Lexmark<br>
-                         Jeux vidéo / Mobile / Fix / Internet / Informatique<br>
+                        <p class="text-content">
+                            Septembre 2014 - Septembre 2016<br>
+                            Formateur / Animateur - Net cité<br>
+                            Cours informatique / Gestion de l'ouverture publique / Accueil physique et téléphonique / Aide au service informatique<br><br>
+                            Février 2013 - Août 2013<br>
+                            Gestion relation client à distance - Acticall EDF<br>
+                            Prise d'appels entrant / Gestion courante du compte EDF<br><br>
+                            Janvier 2008 Janvier 2013<br>
+                            Vendeur multimédia - Sony Nintendo Lexmark<br>
+                             Jeux vidéo / Mobile / Fix / Internet / Informatique<br>
+                        </p>
                     </div>
                     <div class="diplome" style="display: none;"><p class="titre">Diplôme</p>
-                    Janvier 2017<br>
-                    Intégrateur web - Webforce3<br>
-                    Niveaubac +2 (RNCP)
+                        <p class="text-content">
+                            Janvier 2017<br>
+                            Intégrateur web - Webforce3<br>
+                            Niveaubac +2 (RNCP)
+                        </p>
                     </div>
                 </div>
             </div>
